@@ -20,13 +20,13 @@ package org.apache.jena.rdfxml.xmlinput1;
 
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.util.Locale ;
 
 import org.apache.jena.datatypes.RDFDatatype ;
 import org.apache.jena.datatypes.TypeMapper ;
-import org.apache.jena.datatypes.xsd.impl.XMLLiteralType;
 import org.apache.jena.graph.* ;
 import org.apache.jena.irix.*;
 import org.apache.jena.rdf.model.Model ;
@@ -38,6 +38,7 @@ import org.apache.jena.shared.DoesNotExistException ;
 import org.apache.jena.shared.JenaException ;
 import org.apache.jena.shared.UnknownPropertyException ;
 import org.apache.jena.shared.WrappedIOException ;
+import org.apache.jena.vocabulary.RDF;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 import org.xml.sax.SAXNotRecognizedException;
@@ -106,7 +107,7 @@ public class RDFXMLReader implements RDFReaderI, ARPErrorNumbers {
             String connectionURL = url;
             URLConnection conn = null;
             while ( conn == null ) {
-                URLConnection conn2 = new URL(connectionURL).openConnection();
+                URLConnection conn2 = new URI(connectionURL).toURL().openConnection();
                 if ( ! ( conn2 instanceof HttpURLConnection ) ) {
                     conn = conn2;
                     break;
@@ -135,7 +136,7 @@ public class RDFXMLReader implements RDFReaderI, ARPErrorNumbers {
                 read(m, new InputStreamReader(conn.getInputStream(), encoding), url);
         } catch (FileNotFoundException e) {
             throw new DoesNotExistException(url);
-        } catch (IOException e) {
+        } catch (URISyntaxException | IOException e) {
             throw new JenaException(e);
         }
     }
@@ -146,7 +147,7 @@ public class RDFXMLReader implements RDFReaderI, ARPErrorNumbers {
             return NodeFactory.createLiteralLang(lit.toString(), lit.getLang());
 
         if (lit.isWellFormedXML()) {
-            return NodeFactory.createLiteral(lit.toString(), null, XMLLiteralType.rdfXMLLiteral);
+            return NodeFactory.createLiteral(lit.toString(), null, RDF.dtXMLLiteral);
         }
 
         RDFDatatype dt = TypeMapper.getInstance().getSafeTypeByName(dtURI);
