@@ -18,10 +18,10 @@
 
 package org.apache.jena.util;
 
-import static org.apache.commons.lang3.StringUtils.startsWithIgnoreCase;
-
 import java.io.* ;
-import java.net.URL ;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.Charset ;
 import java.nio.charset.StandardCharsets ;
 import java.nio.file.Files;
@@ -29,6 +29,7 @@ import java.nio.file.Path;
 
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.jena.irix.IRIs;
 import org.apache.jena.shared.JenaException ;
 import org.apache.jena.shared.WrappedIOException ;
@@ -241,7 +242,7 @@ public class FileUtils
      *
      */
     private static String pathname(String filename) {
-        if ( !startsWithIgnoreCase(filename, "http:") && !startsWithIgnoreCase(filename, "https:") )
+        if ( !Strings.CI.startsWith(filename, "http:") && !Strings.CI.startsWith(filename, "https:") )
             return filename;
         return StringUtils.substringBefore(filename, "?");
     }
@@ -330,8 +331,12 @@ public class FileUtils
     // TODO Replace with FileManager
     public static BufferedReader readerFromURL( String urlStr )
     {
-        try { return asBufferedUTF8( new URL(urlStr).openStream() ); }
-        catch (java.net.MalformedURLException e)
+        try {
+            InputStream conn = new URI(urlStr).toURL().openStream();
+
+            return asBufferedUTF8( conn );
+        }
+        catch (MalformedURLException | URISyntaxException e)
         { // Try as a plain filename.
             try { return asBufferedUTF8( new FileInputStream( urlStr ) ); }
             catch (FileNotFoundException f) { throw new WrappedIOException( f ); }
